cookbooks/olympus/artemis/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "artemis"
  labels:
    app.kubernetes.io/instance: "artemis"
    app.kubernetes.io/name: "artemis"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "artemis"
      app.kubernetes.io/instance: "artemis"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "artemis"
        app.kubernetes.io/instance: "artemis"
    spec:
      containers:
        - name: "artemis"
          image: "registry.digitalocean.com/zeus-fyi/artemis:latest"
          volumeMounts:
            - mountPath: "/scripts"
              name: "cm-artemis"
          imagePullPolicy: Always
          command: [ "/bin/sh" ]
          args: [ "-c","/scripts/start.sh" ]
          ports:
            - name: "http"
              containerPort: 9004
              protocol: "TCP"
          livenessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: "http"
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            {}
      volumes:
        - name: cm-artemis
          configMap:
            name: cm-artemis
            defaultMode: 0744
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
