cookbooks/olympus/artemis/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "artemis"
  namespace: "artemis"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://aegis.zeus.fyi/v1beta/ethereum/beacon"
spec:
  ingressClassName: "nginx"
  tls:
    - secretName: artemis-tls
      hosts:
        - artemis.zeus.fyi
  rules:
    - host: artemis.zeus.fyi
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: artemis
                port:
                  number: 80
